working server accepting request

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "lets-get-social",
+    "name": "create-a-budget",
     "version": "1.0.0",
     "description": "",
     "main": "server.js",
